--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,6 +54,7 @@
             text-align: center;
             padding: 15px;
         }
+
         .linea {
             width: 100%;
             height: 43px;
@@ -61,11 +62,12 @@
             padding: 10px;
             display: grid;
             grid-template-columns: 25% 25% 25% 25%;
+
             p {
                 display: inline;
                 padding-right: 20px;
                 font-family: 'graphica';
-                
+
                 span {
                     width: 30px;
                     padding-left: 30px;
@@ -73,6 +75,7 @@
                 }
             }
         }
+
         i {
             color: white;
             width: 100%;
@@ -153,12 +156,28 @@
             }
         }
 
+        .b-yellow {
+            &:hover {
+                border: 5px solid rgb(3, 35, 211);
+                color: rgb(3, 35, 211);
+                background-color: rgb(219, 187, 3);
+            }
+        }
+
         .b-green {
 
             &:hover {
                 border: 5px solid rgb(100, 231, 100);
                 color: rgb(44, 201, 44);
                 background-color: rgb(4, 77, 4);
+            }
+        }
+
+        .b-violet {
+            &:hover {
+                border: 5px solid rgb(231, 177, 0);
+                color: rgb(231, 177, 0);
+                background-color: rgb(99, 0, 124);
             }
         }
 
@@ -206,7 +225,7 @@
             box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
             border-radius: 10px;
             overflow: hidden;
-    
+
             &__imagen {
                 width: 100%;
                 height: 350px;
@@ -284,6 +303,7 @@
         p {
             font-size: 1.5rem;
             margin-top: 20px;
+
             span {
                 margin-left: 10px;
             }
@@ -297,9 +317,11 @@
             &__f {
                 color: green;
             }
+
             &__m {
                 color: yellow;
             }
+
             &__d {
                 color: red;
             }
@@ -341,6 +363,7 @@
                     background-color: green;
                     color: white;
                 }
+
                 &__cancelar:hover {
                     background-color: red;
                     color: white;
